--- a/MAUIMobileStarterKit/Screens/FlyoutPanelScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/FlyoutPanelScreen.xaml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUIMobileStarterKit.Screens.FlyoutPanelScreen"
-             Title="FlyoutPanelScreen">
+             x:Class="MAUIMobileStarterKit.Screens.FlyoutPanelScreen">
     <FlyoutPage.Flyout>
-        <ContentPage Title="Menu" >
+        <ContentPage Title="menu" >
             <Grid RowDefinitions="Auto,*" ColumnDefinitions="*" BackgroundColor="#90E0EF">
                 <HorizontalStackLayout Padding="0,20" Grid.Row="0" Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-
                     <Frame CornerRadius="50" BorderColor="#00B4D8" Padding="0" HeightRequest="100" WidthRequest="100" HorizontalOptions="CenterAndExpand">
                         <Image Aspect="AspectFit" 
                                 Source="appiconimg.png"
                                 HeightRequest="200"/>
-
                     </Frame>
                     <Label WidthRequest="150" TextColor="WhiteSmoke" Padding="5" HorizontalTextAlignment="Center" VerticalOptions="Center"  Text="My Canyon Project" FontSize="35" FontFamily="VinaSansRegular" />
-
-
-
                 </HorizontalStackLayout>
                 <ScrollView Grid.Row="1" Grid.Column="0" HorizontalOptions="FillAndExpand">
                     <Grid ColumnSpacing="10"  BackgroundColor="#90E0EF" Padding="30,30,30,0" RowSpacing="20"  
